# cardekho_regression

./: ambiente.ipynb  notebook.ipynb  pyproject.toml  regression.ipynb
